--- a/app/Resources/views/FrontEnd/sorryunsubscribe.html.twig
+++ b/app/Resources/views/FrontEnd/sorryunsubscribe.html.twig
@@ -1,1 +1,17 @@
-{# empty Twig template #}
+{% extends "base.html.twig" %}
+
+{% block body %}
+    <section class="about_title_ht">
+	<div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div>
+                        <p> As part of the unsubscription process, confirmation email was sent to the email address, 
+                            indicated on the previous step. Please login to your email and confirm your desire to unsubscribe FinSensitive.com by clicking confirmation link in the email. </p> <br>
+                        <p  style="font-size:10px"> Please Note: although every unsubscription request is being handled immidiatly, some may take up to 10 working days to process.</p>	
+                    </div>
+                </div>
+            </div>
+	</div>
+    </section>
+{% endblock %}
