--- a/app/Resources/views/FrontEnd/thankureg.html.twig
+++ b/app/Resources/views/FrontEnd/thankureg.html.twig
@@ -1,1 +1,17 @@
-{# empty Twig template #}
+{% extends "base.html.twig" %}
+
+{% block body %}
+    <section class="about_title_ht">
+		<div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div>
+                        <p style="font-size:25px"> Thank you for your wish to become part of FinSensitive family.</p> <br> 
+						<p>	As part of the registration process, confirmation email was sent to the email address, 
+							indicated on the previous step. Please login to your email and confirm your desire to join FinSensitive.com by clicking confirmation link in the email. </p>
+                    </div>
+                </div>
+            </div>
+		</div>
+    </section>
+{% endblock %}
