--- a/app/Resources/views/FrontEnd/unsubscribe.html.twig
+++ b/app/Resources/views/FrontEnd/unsubscribe.html.twig
@@ -1,1 +1,17 @@
-{# empty Twig template #}
+{% extends "base.html.twig" %}
+
+{% block body %}
+	<section class="about_title_ht">
+		<div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div>
+                        <p style="font-size:25px"> We are sorry you have decided leave us and hope you'll be back soon</p> <br> 
+			<p> Please input your email above and click "Unsubscribe" button</p> <br>
+			<p style="font-size:10px"> Please Note: although every unsubscription request is being handled immidiatly, some may take up to 10 working days to process.</p>	
+                    </div>
+                </div>
+            </div>
+		</div>
+	</section>
+{% endblock %}
