--- a/app/Resources/views/FrontEnd/privacy.html.twig
+++ b/app/Resources/views/FrontEnd/privacy.html.twig
@@ -7,7 +7,7 @@
                 <div class="col-md-12 text-center">
                     <div class="about_title">
                         <h2>Privacy Policy</h2>
-                        <img src="images/shape.png" alt="">
+                        <img src="../images/shape.png" alt="">
 						<div class="terms-just">
 							<h3 class="header-terms">What information we collect</h3>
 							<p>
