--- a/app/Resources/views/FrontEnd/index.html.twig
+++ b/app/Resources/views/FrontEnd/index.html.twig
@@ -4,40 +4,54 @@
     <!-- subscription form -->
         <form class="subscribe-form min-width" style="text-align:center;">
             <div class= "row">
+                 {{ form_start(form1, {'attr': {'novalidate': 'novalidate'}}) }}
+                 <div class="input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12 text-center margin-f">
+                    <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+                    {{ form_label(form1.firstname) }}
+                    {{ form_widget(form1.firstname) }}
+                </div>
                 <div class="input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12 text-center margin-f">
                     <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                    <input class="form-control" type="text" placeholder="First Name">
+                    {{ form_label(form1.lastname) }}
+                    {{ form_widget(form1.lastname) }}
                 </div>
                 <div class="input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12 text-center margin-f">
-                    <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                    <input class="form-control" type="text" placeholder="Last Name">
-                </div>	
-                <div class="input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12 text-center margin-f">
-                        <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-                        <input class="form-control" type="text" placeholder="Email address">
+                    <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+                    {{ form_label(form1.emailaddress) }}
+                    {{ form_widget(form1.emailaddress) }}
                 </div>
                 <div class="input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12 text-center margin-f">
-                        <span class="input-group-addon"><i class="fa fa-phone fa-fw"></i></span>
-                        <input class="form-control" type="text" placeholder="Phone">
+                    <span class="input-group-addon"><i class="fa fa-phone fa-fw"></i></span>
+                    {{ form_label(form1.phone) }}
+                    {{ form_widget(form1.phone) }}
                 </div>
                 <div class="input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12 text-center margin-f">
-                        <span class="input-group-addon"><i class="fa fa-male fa-fw"></i></span>
-                        <input class="form-control" type="list" placeholder="Age">
+                    <span class="input-group-addon"><i class="fa fa-male fa-fw"></i></span>
+                    {{ form_label(form1.age) }}
+                    {{ form_widget(form1.age) }}
                 </div>
+                
                 <div class="picklist-style">
-                        <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
-                                <label><input type="checkbox" value="">I have read and agreed to Terms &amp Conditions</label>
-                        </div>
-                        <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
-                                <label><input type="checkbox" value="">I would like to recieve emails from FinSensitive.com</label>
-                        </div>
-                        <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
-                                <label><input type="checkbox" value="">I would like to recieve emails from partners of FinSensitive.com</label>
-                        </div>
+                    <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+                        {{ form_widget(form1.agreeterms) }}
+                        <lable> {{ 'I have read and agreed to ' }} <a href="{{ path('terms') }}" target="_blank"> {{ 'Terms & Conditions' }} </a> </lable>
+                        {{ form_row(form1.agreeterms) }}
+                    </div>
+                    <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+                        {{ form_widget(form1.agreeemails) }}
+                         <lable> {{ 'I want to get emails from FinSensitive.com' }} </lable>
+                        {{ form_row(form1.agreeemails) }}
+                    </div>
+                    <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+                        {{ form_widget(form1.agreepartners) }}
+                        <lable> {{ 'I want to get mails from Partners of FinSensitive.com' }} </lable>
+                        {{ form_row(form1.agreepartners) }}
+                    </div>
                 </div>
-                <div style="padding-top:1%; padding-bottom:8%;">
-                        <button type="button" class="smoothScroll btn btn-danger sb-button" data-toggle="modal" data-target="#myModal">Subscribe to join</button>
-                </div>
+                    {{ form_row(form1.submit, { 'label': 'Subscribe to join' }) }}
+                
+                 {{ form_end(form1) }}
+                
             </div>
         </form>
 {% endblock %}
