--- a/web/css/style.css
+++ b/web/css/style.css
@@ -527,6 +527,7 @@ letter-spacing: 0px;
 .picklist-style {
 	text-align:justify;
 	color:white;
+        padding-left: 1.85em;
 }
 
 .home-text-tr {
