--- a/app/Resources/views/FrontEnd/terms.html.twig
+++ b/app/Resources/views/FrontEnd/terms.html.twig
@@ -8,7 +8,7 @@
                 <div class="col-md-12 text-center">
                     <div class="about_title">
                         <h2>Terms &amp Conditions</h2>
-                        <img src="images/shape.png" alt="">
+                        <img src="../images/shape.png" alt="">
 						<div class="terms-just">
 							<h3 class="header-terms">General Terms and Conditions</h3>
 							<p>
