--- a/app/Resources/views/FrontEnd/emailUnsubscribe.html.twig
+++ b/app/Resources/views/FrontEnd/emailUnsubscribe.html.twig
@@ -3,7 +3,7 @@
         <head>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1" />
-          <title>Jobbery.com | Complete Unsubscription</title>
+          <title>FinSensitive.com | Complete Unsubscription</title>
         </head>
         <body bgcolor="#f7f7f7" style="font-family: Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; width: 100% !important; height: 100%; color: #676767; margin: 0;">
              
@@ -15,7 +15,7 @@
             <table align="center" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse !important; min-width: 600px; font-family: Helvetica, Arial, sans-serif;">
               <tr style="font-family: Helvetica, Arial, sans-serif; background-color: white;" bgcolor="white">
                     <td style="vertical-align: middle; padding-bottom: 20px; padding-top: 20px; border-collapse: collapse; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #777777; text-align: center; line-height: 21px; width: 290px; padding-left: 10px;" align="center" valign="middle">
-                    <a href="travelflex.com" style="text-transform: uppercase; color: #ec523f; font-size: 32px; font-weight: 700; font-family: Helvetica, Arial, sans-serif; text-decoration: none !important;">Jobbery</a>
+                    <a href="travelflex.com" style="text-transform: uppercase; color: #ec523f; font-size: 32px; font-weight: 700; font-family: Helvetica, Arial, sans-serif; text-decoration: none !important;">FinSensitive</a>
                 </td>
               </tr>
               <tr style="font-family: Helvetica, Arial, sans-serif;">
@@ -73,13 +73,13 @@
                         </tr>
                             <tr style="font-family: Helvetica, Arial, sans-serif;">
                                 <td style="border-collapse: collapse; font-family: Helvetica, Arial, sans-serif; font-size: 10px; color: #777777; text-align: left; line-height: 125%; width: 100% !important; padding: 0px 50px;" align="left"> 
-                                This email and any/all of its content is designated solely to {{ name|capitalize }} {{ lastname|capitalize }} on email address {{email}}. You are receiving this email as part of unsubscription process to Jobbery.com. <br>
+                                This email and any/all of its content is designated solely to {{ name|capitalize }} {{ lastname|capitalize }} on email address {{email}}. You are receiving this email as part of unsubscription process to FinSensitive.com. <br>
                                 <strong>Please note:</strong> 
                                 <ul>
                                     <li> no additional information is to be requested as part of unsubscription process </li>
                                     <li> although each unsubscription request is being handled instantly, it may take up to <strong> 10 working days </strong> to process. During this period you might still be getting promotion emails from us.</li>
                                 </ul>
-                                If you have received this email by mistake or do not wish to unsubscribe from Jobbery.com, please delete this email.
+                                If you have received this email by mistake or do not wish to unsubscribe from FinSensitive.com, please delete this email.
                                 </td>
                             </tr>
                     </table>
@@ -92,7 +92,7 @@
                     <table cellspacing="0" cellpadding="0" width="600" style="border-collapse: collapse !important; font-family: Helvetica, Arial, sans-serif;">
                       <tr style="font-family: Helvetica, Arial, sans-serif;">
                         <td style="border-collapse: collapse; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #777777; text-align: center; line-height: 21px; padding: 10px 0;" align="center">
-                          <strong style="font-family: Helvetica, Arial, sans-serif;">Jobbery.com</strong><br style="font-family: Helvetica, Arial, sans-serif;" />
+                          <strong style="font-family: Helvetica, Arial, sans-serif;">FinSensitive.com</strong><br style="font-family: Helvetica, Arial, sans-serif;" />
                           75 Symon road <br style="font-family: Helvetica, Arial, sans-serif;" />
                           London, Uniter Kingdom <br style="font-family: Helvetica, Arial, sans-serif;" /><br style="font-family: Helvetica, Arial, sans-serif;" />
                         </td>
