--- a/app/Resources/views/FrontEnd/index.html.twig
+++ b/app/Resources/views/FrontEnd/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block header %}
     <!-- subscription form -->
-        <form class="subscribe-form min-width" style="text-align:center;">
+        <div class="subscribe-form min-width" style="text-align:center;">
             <div class= "row">
                 
                  {{ form_start(form1, {'attr': {'novalidate': 'novalidate'}}) }}
@@ -55,7 +55,7 @@
                  {{ form_end(form1) }}
                 
             </div>
-        </form>
+        </div>
 {% endblock %}
 
 {% block body %}
