--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="col-md-9  wow fadeInRight animated">
-                    <form class="contact-form" action="">
+                    <div class="contact-form" action="">
                         <div class="row">
                             {{ form_start(form2, {'attr': {'novalidate': 'novalidate'}}) }}
                                 <div class="col-md-6">
@@ -128,7 +128,7 @@
                                 
                             {{ form_end(form2) }}
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
