--- a/web/css/style.css
+++ b/web/css/style.css
@@ -552,6 +552,7 @@ letter-spacing: 0px;
 	padding-top:20px;
 	padding-bottom:20px;
 	font-size:20px;
+        background-color: lightgray;
 }
 
 /*popup window */
