--- a/app/Resources/views/FrontEnd/index.html.twig
+++ b/app/Resources/views/FrontEnd/index.html.twig
@@ -53,7 +53,17 @@
                     {{ form_row(form1.submit, { 'label': 'Subscribe to join' }) }}
                 
                  {{ form_end(form1) }}
-                
+            </div>
+        </div>
+        <div class="window-BG" id="alert">
+            <div class="window">
+                <div id="alert-title" class="win-img-text">{{ 'Please solve below errors'|trans }}:</div>
+                <div id="alert-text" class="win-text">
+                    <div style="color: white; text-align: justify;">
+                        {{ form_errors(form1) }}
+                    </div>    
+                </div>
+                <div class="window-close win-close-2">{{ 'Close'|trans }}</div>
             </div>
         </div>
 {% endblock %}
