--- a/app/Resources/views/FrontEnd/index.html.twig
+++ b/app/Resources/views/FrontEnd/index.html.twig
@@ -117,8 +117,9 @@
                     </div>
                 </div>
                 <div class="col-md-8  wow fadeInRight animated" style="text-align:justify">
-                    <p class="about_us_p"><strong>FinSensitive.com is a permission based marketing platform </strong>, which enables its subscribers to get access to high quality finance related information including but not limited to alternative investment opportunities, stock market analytics and investment practices through our targeted and designated email and sms marketing campaigns. If you have been thinking of building up your financial independence - make FinSensitive.com your first step in this gurney</p>
-					<p class="about_us_p"><strong>Here in FinSensitive.com we are all about your financial prosperity </strong>. Are missing is to increase the degree of financial literacy of our subscribers so they reach their financial goals with us. </p>
+                    <p class="about_us_p"><strong>FinSensitive.com is a permission based marketing platform</strong>, which enables its subscribers to get access to high quality finance related advice and information including but not limited to alternative 
+                        investment opportunities, stock market analytics and investment practices through our targeted email and sms marketing campaigns. If you have been thinking on building up your financial independence - make FinSensitive.com your first step in this gurney.</p>
+                    <p class="about_us_p"><strong>Here in FinSensitive.com we are all about your financial prosperity</strong>. Are mission is to increase the degree of financial literacy of our subscribers so they reach their financial goals.</p>
                 </div>
             </div>
         </div>
@@ -176,7 +177,7 @@
                     <div class="work_title  wow fadeInUp animated">
                         <h1>Latest of what we do</h1>
                         <img src="../images/shape.png" alt="">
-                        <p>Before you decide to our premium finance advisory club, have a look below at some of our latest topics</p>
+                        <p>Before you decide to join our premium finance advisory club, have a look below at some of our latest topics</p>
                     </div>
                 </div>
             </div>
