--- a/app/Resources/views/FrontEnd/emailSubscribe.html.twig
+++ b/app/Resources/views/FrontEnd/emailSubscribe.html.twig
@@ -15,7 +15,7 @@
             <table align="center" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse !important; min-width: 600px; font-family: Helvetica, Arial, sans-serif;">
               <tr style="font-family: Helvetica, Arial, sans-serif; background-color: white;" bgcolor="white">
                     <td style="vertical-align: middle; padding-bottom: 20px; padding-top: 20px; border-collapse: collapse; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: #777777; text-align: center; line-height: 21px; width: 290px; padding-left: 10px;" align="center" valign="middle">
-                    <a href="FinSensitive.com" style="text-transform: uppercase; color: #642891; font-size: 32px; font-weight: 700; font-family: Helvetica, Arial, sans-serif; text-decoration: none !important;">FinSensitive</a>
+                    <a href="http://finsensitive.com" style="color: #642891; font-size: 32px; font-weight: 700; font-family: Helvetica, Arial, sans-serif; text-decoration: none !important;">FinSensitive.com</a>
                 </td>
               </tr>
               <tr style="font-family: Helvetica, Arial, sans-serif;">
@@ -77,7 +77,7 @@
                                 <br style="font-family: Helvetica, Arial, sans-serif;" />
                                 If you have received this email by mistake or do not wish to become part of FinSensitive.com family, please delete it.
                                 <br style="font-family: Helvetica, Arial, sans-serif;" />
-                                If you wish to unsubscribe from receiving any/all further notifications (both email and sms) from FinSensitive.com, please use <a href="http://FinSensitive.com/unsubscribe.html.twig" style="font-family: Helvetica, Arial, sans-serif; color: #676767; text-decoration: none !important;"> Unsubscribe </a> button on <a href="http://finsensitive.com" style="font-family: Helvetica, Arial, sans-serif; color: #676767; text-decoration: none !important;"> FinSensitive.com </a> or via unsubscribe link in any of our emails.
+                                If you wish to unsubscribe from receiving any/all further notifications (both email and sms) from FinSensitive.com, please use <a href="http://finsensitive.com/unsubscribe.html.twig" style="font-family: Helvetica, Arial, sans-serif; color: #676767; text-decoration: none !important;"> Unsubscribe </a> button on <a href="http://finsensitive.com" style="font-family: Helvetica, Arial, sans-serif; color: #676767; text-decoration: none !important;"> FinSensitive.com </a> or via unsubscribe link in any of our emails.
                                 </td>
                             </tr>
                     </table>
