--- a/app/Resources/views/FrontEnd/index.html.twig
+++ b/app/Resources/views/FrontEnd/index.html.twig
@@ -37,21 +37,24 @@
                     <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
                         
                         {% for field in form1.optindetails %}
-                            {{ form_label(field.agreeterms) }}
                             {{ form_widget(field.agreeterms) }}
+                            <lable> {{ 'I have read and agreed to ' }} <a href="{{ path('terms') }}" target="_blank"> {{ 'Terms & Conditions' }} </a> </lable>
+                            {{ form_row(field.agreeterms) }}
                         {% endfor %}   
                         
                     </div>
                     <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
                         {% for field in form1.optindetails %}
-                            {{ form_label(field.agreeemails) }}
                             {{ form_widget(field.agreeemails) }}
+                            <lable> {{ 'I want to get emails from FinSensitive.com' }} </lable>
+                            {{ form_row(field.agreeemails) }}
                         {% endfor %}  
                     </div>
                     <div class="checkbox input-group margin-bottom-sm col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
                         {% for field in form1.optindetails %}
-                            {{ form_label(field.agreepartners) }}
                             {{ form_widget(field.agreepartners) }}
+                            <lable> {{ 'I want to get mails from Partners of FinSensitive.com' }} </lable>
+                            {{ form_row(field.agreepartners) }}
                         {% endfor %}  
                     </div>
                 </div>
