--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,7 +44,7 @@
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
 	                  </button>
-	                  <a class="navbar-brand" href="{{ path('index') }}"><img src="../images/logo.png" alt=""></a>
+	                  <a class="navbar-brand" href="{{ path('index') }}"><img src="{{ asset('images/logo.png') }}" alt=""></a>
 	                </div>
 
 	                <!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,7 +68,7 @@
 	                    <div class="col-md-12 text-center">
 	                        <div class="home_text wow fadeInUp animated">
 	                            <h3 class="small-tx">Your ultimate guide to financial independence</h3>
-	                            <img src="../images/shape.png" alt="">                        
+	                            <img src="{{ asset('images/shape.png') }}" alt="">                        
 	                        </div>
 	                    </div>
 	                </div>
@@ -86,7 +86,7 @@
                 <div class="col-md-12 text-center">
                     <div class="contact_title  wow fadeInUp animated">
                         <h1>Send us a message</h1>
-                        <img src="../images/shape.png" alt="">
+                        <img src="{{ asset('images/shape.png') }}" alt="">
                         <p>You question but and not sure if you would like to join us. Feel free to send us an email and ask any question you would like to get the answer to. Just complete the form below and we'll get back to you as soon as possible</p>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="footer_logo   wow fadeInUp animated">
-                        <img src="../images/logo.png" alt="">
+                        <img src="{{ asset('images/logo.png') }}" alt="">
                     </div>
                 </div>
             </div>
